            * Events :
                - The UUIDs of the instances of 'models.EventType' created by the 'populate' script are now fixed (to be consistent between Creme instances).
                  A data migration fixes the UUIDs of the 4 types provided by default, and stores the old UUIDs in their field "meta_data".
            * Polls :
                - The UUIDs of the instances of 'models.PollType' created by the 'populate' script are now fixed (to be consistent between Creme instances).
                  A data migration fixes the UUIDs of the 3 types provided by default, and stores the old UUIDs in their field "meta_data".
            * Crudity :
                - The method 'bricks.CrudityHistoryBrick.generate_id()' has been removed.
            * CTI :
                - In the class-view 'views.PhoneCallCreation', some the attributes & methods have been replaced
                  in order to use UUIDs instead of integer IDs for statuses & types.
            * SMS :
                - The class 'bricks._RelatedEntitesBrick' has been renamed '_RelatedEntitiesBrick'.

    Internal breaking changes :
    ---------------------------
    (they should not cause problem if you have not deeply modified the source code of Creme)

        # In 'creme_core.core.entity_filter.condition_handler' :
            - The attribute 'BaseCustomFieldConditionHandler._custom_field_id', has been replaced by '_custom_field_uuid'.
            - In the class 'RelationConditionHandler', these attributes have been replaced :
                - _entity_id => _entity_uuid
                - _ct_id => _ct_key
        # In the model 'creme_core.models.fields_config.FieldsConfig' :
            - The attributes "_excluded_fnames" & "_required_fnames" have been removed.
            - The method 'update_form_fields()' now takes a form instance, and can set the _meta attribute (backported to 2.5.6/2.4.13).
        # Apps :
            * Creme_config :